--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
