Added firestore support for users

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
+    // Profile Photo (CircleImageView)
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Import the Firebase BoM
@@ -75,5 +76,8 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-core'
+
+    // Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore'
 
 }
