--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="true" />
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,8 @@
         </activity>
         <activity
             android:name=".GameSearch"
-            android:label="@string/title_activity_game_search">
+            android:label="@string/title_activity_game_search"
+            android:windowSoftInputMode="adjustPan|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
